Genau/force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
    <label>Visit</label>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>Visit  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>