Genau/force-app/main/default/objects/Visit__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <label>Observation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>