Genau/force-app/main/default/objects/Visit__c/fields/Person_Visited__c.field-meta.xml
<CustomField>
    <fullName>Person_Visited__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Visited</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Instead of here please select the related contact records</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>